# PolySche

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  release-please-config.json  toto.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release-please.yml
cmake/: PolyScheConfig.cmake.in
examples/: CMakeLists.txt  example_rational.cpp  utils.hpp
include/: gauss.hpp  polynomial.hpp  polynomial_scheme.hpp  rational.hpp  simplify.hpp
include/polysche/: polynomial.hpp  polynomial_scheme.hpp
tests/: CMakeLists.txt  test_gauss.cpp  test_polynomial.cpp  test_polynomial_scheme.cpp  test_rational.cpp  test_tmp.cpp  utils.hpp
